--- a/index.html
+++ b/index.html
@@ -1,2 +1,7 @@
 <!DOCTYPE html>
-<p>hi</>
+<title>Unblocked arcade</title>
+h1 { font-family: "Open Sans"; font-size: 24px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 26.4px; } h3 { font-family: "Open Sans"; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 700; line-height: 15.4px; } p { font-family: "Open Sans"; font-size: 14px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 20px; } blockquote { font-family: "Open Sans"; font-size: 21px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 30px; } pre { font-family: "Open Sans"; font-size: 13px; font-style: normal; font-variant: normal; font-weight: 400; line-height: 18.5714px; }
+<h1>Welcome to Unblocked arcade</h1>
+<p>Unblocked arcade is the place where you can make work or school your home! We (Unblocked arcade) have tons of games, like head soccer, that you can play
+  with!</>
+  <a href="headsoccer.html">head soccer</a>
