--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <title>Unblocked arcade</title>
 <link rel="icon" href="favicon.ico" type="image/x-icon"/ >
+<link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Open+Sans" />
 <h1>Welcome to Unblocked arcade</h1>
 <p>Unblocked arcade is the place where you can make work or school your home! We (Unblocked arcade) have tons of games, like head soccer, that you can play
   with!</>
