--- a/index.html
+++ b/index.html
@@ -7,4 +7,7 @@
 <h1>Welcome to Unblocked arcade</h1>
 <p>Unblocked arcade is the place where you can make work or school your home! We (Unblocked arcade) have tons of games, like head soccer, that you can play
   with!</>
-  <a href="headsoccer.html">head soccer</a>
+  <a href="headsoccer.html">
+head soccer</a>
+<a href="minecraft.html">
+  minecraft
